output_10.1.168/block_orthogonalize.cu.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/block_orthogonalize.cu-f4a560.hip.

[HIPIFY] info: file './quda/lib/block_orthogonalize.cu' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 5
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 86
  TOTAL bytes: 14769
  CHANGED lines of code: 5
  TOTAL lines of code: 349
  CODE CHANGED (in bytes) %: 1
  CODE CHANGED (in lines) %: 1
  TIME ELAPSED s: 0.78
[HIPIFY] info: CONVERTED refs by type:
  memory: 2
  type: 2
  numeric_literal: 1
[HIPIFY] info: CONVERTED refs by API:
  CUDA Driver API: 1
  CUDA RT API: 4
[HIPIFY] info: CONVERTED refs by names:
  cuMemcpyHtoDAsync: 1
  cudaMemcpyHostToDevice: 1
  cudaMemcpyToSymbolAsync: 1
  cudaStream_t: 2
